# nda-latest

00_SERVER_AGT/00_LINUX/00_PAM/: .gitignore
00_SERVER_AGT/00_LINUX/00_PAM/01_nd_nix_pam/: Makefile  Makefile_org  common.h  nd_nix_pam.c  udo netstat -tulnp | grep ssh
00_SERVER_AGT/00_LINUX/00_PAM/01_nd_nix_pam.1.0/: Makefile  Makefile_static  nd_nix_pam.c
00_SERVER_AGT/00_LINUX/00_PAM/02_scripts/: build_curl_lib_static.sh  build_json-c_lib_static.sh  build_libz_lib_static.sh  build_libz_lib_static.sh_org  build_openssl_lib_static.sh  build_uuid_lib_static.sh  buildinfo.conf  nda_pam_libs_build_static.sh
00_SERVER_AGT/00_LINUX/00_PAM/04_DOC/: README.txt  README_ENG.txt  tree.txt
00_SERVER_AGT/00_LINUX/01_KERNEL/kernel/: Makefile  nd_nix_nfm_common.h  nd_nix_nfm_sessions.c  nd_nix_nfm_sessions.h  nda-nfk_main.c
00_SERVER_AGT/00_LINUX/01_KERNEL/lib/nda_nfk_lib/NdNixNfmDrv_ctl/temp/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  nd_nix_nfm_lib.h  nixdrvctl  nixdrvctl.c
00_SERVER_AGT/00_LINUX/01_KERNEL/lib/nda_nfk_lib/NdNixNfmDrv_ctl/temp/autom4te.cache/: output.0  requests  traces.0  traces.1
00_SERVER_AGT/01_WINDOWS/00_CREDENTIAL_PROVIDER/NdaCredentialProviderFilter/: CNdaCredentialProviderFilter.cpp  CNdaCredentialProviderFilter.h  Flt_Register.reg  Flt_Unregister.reg  NdaCredentialProviderFilter.vcxproj  NdaCredentialProviderFilter.vcxproj.filters  dllmain.cpp  dllmain.h  guid.h  ndacpcredentialproviderfilter.def
00_SERVER_AGT/01_WINDOWS/00_CREDENTIAL_PROVIDER/cpp/: CNdaCredential.cpp  CNdaCredential.h  (+17 more)
(+37 files in other folders)
